# nasty-top

./: .gitignore  Cargo.toml  README.md  TUNING_RULES.md  deploy.sh  flake.nix  output.txt
.github/workflows/: release.yml
contrib/aur/: .SRCINFO  PKGBUILD
src/: advisor.rs  app.rs  main.rs  metrics.rs  sysfs.rs  tuning.rs  ui.rs
