[package]
name = "nasty-top"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Interactive bcachefs tuning workbench — live metrics + sysfs knobs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.30", features = ["fs"] }
